# HavingFun

./: .gitignore  A_Better_Integer_Sequence.cpp  A_Better_Main.cpp  Alternative_Printing_Threads.cpp  Better_Input.cpp  Binding_Iterators.cpp  Boyer_Moore_Searcher.cpp  Buffer_Overflow.cpp  COVID_Tracker.cpp  Cache_Benchmark.cpp  Coin_Change_Enumeration.cpp  Custom_Allocator.cpp  Efficient_Matrix_Multiplication.cpp  Exception_In_C.c  Fibonacci.cpp  Find_Duplicate_Number.cpp  Game_Of_Life.cpp  Getter_And_Setter.cpp  How_Slow_Is_Heap_Allocation.cpp  Impossible_rvalue_reference_class_member.cpp  Is_Power_Of_Two.cpp  KMP_String_Matching.cpp  Kotlin_When_C++.cpp  Linked_List_Without_Pointer.cpp  Noisy_Class.hpp  Object_Oriented_C.c  Pointer_VS_Reference_VS_Value.cpp  Printf_VS_COUT.cpp  README.md  RVO&NRVO.cpp  SIMD.cpp  STL_Helper.cpp  Smart_Pointer_VS_Stack_Allocation.cpp  Stack_Allocated_Linked_List.cpp  Structured_Binding.cpp  Template_Meta_Programming_Merge_Sort.cpp  Understand_Forwarding_Ref.cpp  Understand_Move.cpp  Universal_Array.cpp  a.out
Assembly/: main.s
CMakeMacro/: CMakeLists.txt  main.cpp
CMakeOOPifyC/: CMakeLists.txt  a.hpp  main.c  main_oop.c
C_String/: CMakeLists.txt  CMakeSettings.json  cstring.c  cstring.h  main.c  serialize_test.txt  test.cpp
Cyclic Include/: CMakeLists.txt  a.h  b.h  main.c
LC/: 122.best-time-to-buy-and-sell-stock-ii.cpp  14.longest-common-prefix.cpp  189.rotate-array.cpp  27.remove-element.cpp  350.intersection-of-two-arrays-ii.cpp
NiftyCounter/: CMakeLists.txt  Initializer.cpp  Initializer.h  MySingleton.h  UseSingleton.cpp  (+2 more)
(+74 files in other folders)
